package ar.org.hospitalcuencaalta.servicio_entrenamiento.repositorio;

import ar.org.hospitalcuencaalta.servicio_entrenamiento.modelo.Capacitacion;
import org.springframework.data.jpa.repository.JpaRepository;

public interface CapacitacionRepository extends JpaRepository<Capacitacion, Long> {}