package ar.org.hospitalcuencaalta.servicio_entrenamiento.repositorio;

import ar.org.hospitalcuencaalta.servicio_entrenamiento.modelo.EvaluacionDesempeno;
import org.springframework.data.jpa.repository.JpaRepository;

public interface EvaluacionDesempenoRepository extends JpaRepository<EvaluacionDesempeno, Long> {}
